# extract-inator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
database/: base_data.sql
deprecated-codes/: document_loader_chat.py
exam-helpler/: setup.py
exam-helpler-v2/: query_data.py
exam-helpler-v3/: compare_embeddings.py  get_embedding_function.py  populate_database.py
exam-helpler/dao/: connection.py
exam-helpler/database/: create.sql
extract-inator/deprecated/: chatbot.py  document_json.py  document_loader.py  evaluation.py
extract-inator/exam-helpler/: TNGPE.py
extract-inator/scripts/: graph-plot.py  python.py
extract-inator/solar-energy/: graph-plot.py
extract_inator/: QA.py  document_json.py  document_loader.py  document_loader_chat.py  document_streamlit.py  parcerHTML.py  parcerJson.py
extract_inator/deprecated/: translate.py
solar-energy/: graph-plot.py
