[tool.poetry]
name = "extract-inator"
version = "0.1.0"
description = ""
authors = ["meirelescg <geu_costa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.5"
langchain-chroma = "^0.1.1"
langchain-openai = "^0.1.9"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.5"
pypdf = "^4.2.0"
docarray = "^0.40.0"
streamlit = "^1.36.0"
fitz = "^0.0.1.dev2"
frontend = "^0.0.3"
matplotlib = "^3.9.1"
psycopg2-binary = "^2.9.9"
tiktoken = "^0.7.0"
unstructured = {extras = ["pdf"], version = "^0.15.0"}
boto3 = "^1.34.149"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
