[tool.poetry]
name = "extract-inator"
version = "0.1.0"
description = ""
authors = ["meirelescg <geu_costa@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
